--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 # uses: tgymnich/fork-sync@0cc6ac48fd51415e7c34e5b8823021bc952a5f5f
 on:
   schedule:
-    - cron: '*/30 * * * *' # every 30 minutes
+    - cron: '0 8 * * 1,2,5' # every monday, tuesday, and friday
   workflow_dispatch: # on button click
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.4
         with:
-          
+          owner: MaxwellChristian
           token: ${{ secrets.GITHUB_TOKEN }}
           base: master
           head: master
