--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -18,5 +18,4 @@ jobs:
           base: master
           head: master
           pr_title: Fork Sync
-          auto_approve: true
-          merge_method: rebase
+          merge_method: merge
